poetry: update to be PEP 621 style compatible
and add src/ level for sources.

Signed-off-by: Tomas Krcka <tomas.krcka@industware.cloud>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,42 +1,44 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core>=2.0.0"]
+build-backend = "poetry.core.masonry.api"
 
 [project]
 name = "openprotocol"
 version = "0.1.0"
 description = "Python library for Open Protocol communication (e.g., tightening systems)"
-readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.12,<4.0"
 license = { text = "MIT" }
 authors = [
-  { name = "Industware s.r.o, 2025", email = "info@industware.cloud" }
+  { name = "Tomas Krcka, Industware s.r.o, 2025", email = "tomas.krcka@industware.cloud" }
 ]
-dependencies = ["setuptools (>=61.0)", "wheel (>=0.45.1,<0.46.0)"]
+keywords = ["openprotocol", "industrial", "tightening", "communication", "atlascopco"]
+dependencies = ["poetry-core (>=2.0.0)"]
 
 [project.urls]
-Homepage = "https://github.com/yourname/openprotocol-python"
-Repository = "https://github.com/yourname/openprotocol-python"
-Issues = "https://github.com/yourname/openprotocol-python/issues"
+Homepage = "https://github.com/Industware-cloud/openprotocol-python"
+Repository = "https://github.com/Industware-cloud/openprotocol-python"
+Issues = "https://github.com/Industware-cloud/openprotocol-python"
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.2.0",
+    "pytest-cov>=5.0.0",
+    "ruff>=0.13.0",
+    "mypy>=1.10.0",
+    "pre-commit>=3.7.0"
+]
 
 [tool.setuptools.packages.find]
-where = ["openprotocol"]
+where = ["src"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.2.0"
-black = "^24.4.2"
-flake8 = "^7.1.0"
-mypy = "^1.10.0"
 
 # Poetry compatibility section
 [tool.poetry]
 name = "openprotocol"
 version = "0.1.0"
 description = "Python library for Open Protocol communication (e.g., tightening systems)"
-authors = ["Tomas Krcka <info@industware.cloud>"]
+authors = ["Tomas Krcka <tomas.krcka@industware.cloud>"]
 license = "MIT"
-readme = "README.md"
-packages = [{ include = "openprotocol" }]
+packages = [{ include = "src" }]
